--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AN2Linux</string>
+    <string name="packagename">kiwi.root.an2linuxclient</string>
     <string name="activity_label_enabled_applications">Enabled applications</string>
     <string name="activity_label_server_configuration">Server configuration</string>
     <string name="activity_label_client_certificate">Device certificate and key</string>
