--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,6 @@
     <string name="client_certificate_fingerprint">Certificate fingerprint:</string>
     <string name="client_certificate_button_text">Generate new key and certificate</string>
     <string name="generate_key_working">Working hard…</string>
+    <string name="generate_key_working_notification">Generating a 4096 bit RSA key…</string>
     <string name="general_public_license_3">Copyright 2017 rootkiwi\n\nAN2Linux is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>
 </resources>
