--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,15 @@
     <string name="generate_key_working">Working hard…</string>
     <string name="generate_key_working_notification">Generating a 4096 bit RSA key…</string>
     <string name="general_public_license_3">Copyright 2017 rootkiwi\n\nAN2Linux is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>
+    <string name="main_changelog">Changelog</string>
+    <string name="changelog">
+        &lt;b&gt;0.3.0 (Feb 6, 2017)&lt;/b&gt;&lt;br&gt;
+        - New preference added for custom icon size&lt;br&gt;&lt;br&gt;
+        &lt;b&gt;0.2.0 (Jan 9, 2017)&lt;/b&gt;&lt;br&gt;
+        - New preference added for Android 5.0+ Lollipop users: "Block local notifications"&lt;br&gt;&lt;br&gt;
+        &lt;b&gt;0.1.1 (Jan 7, 2017)&lt;/b&gt;&lt;br&gt;
+        - Fix bug that made AN2Linux unusable for Android 4.4 KitKat users (using ciphers not supported until 5.0)&lt;br&gt;&lt;br&gt;
+        &lt;b&gt;0.1.0 (Jan 2, 2017)&lt;/b&gt;&lt;br&gt;
+        - Initial release
+    </string>
 </resources>
