Add service notification to run in foreground
I'm not sure if all interface implementations are necessary but I'm not
familiar enough with android to test that they are not necessary.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="notif_settings_custom_no_enabled_summary">Tap here to enter the \'Enabled applications\' settings</string>
     <string name="notif_settings_min_notification_priority_title">Minimum notification priority</string>
     <string name="main_changelog">Changelog</string>
+    <string name="utils_an2linux_service">AN2Linux foreground service</string>
 </resources>
