Change minSdkVersion from 19 to 18
Change from Android 4.4 (sdk 19) to Android 4.3 (sdk 18).
Title/message extraction from notification was added in sdk 19, which
means that it will not be supported for Android 4.3 users. It might
still be possible to extract title/message with reflection.

Closes #26

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,6 @@
     <string name="notif_settings_min_notification_priority_title">Minimum notification priority</string>
     <string name="main_changelog">Changelog</string>
     <string name="utils_an2linux_service">AN2Linux foreground service</string>
+    <string name="pref_message_info_extraction_unsupported_version">Title/message extraction requires Android 4.4+</string>
+    <string name="pref_force_appname_info_extraction_unsupported">Title/message extraction requires Android 4.4+. So if title is included, it will always be forced to app name.</string>
 </resources>
