--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="utils_an2linux_service">AN2Linux foreground service</string>
     <string name="pref_message_info_extraction_unsupported_version">Title/message extraction requires Android 4.4+</string>
     <string name="pref_force_appname_info_extraction_unsupported">Title/message extraction requires Android 4.4+. So if title is included, it will always be forced to app name.</string>
+    <string name="enabled_applications_filter_hint_text">Filter:</string>
 </resources>
